--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -6,12 +6,10 @@
 }
 
 .about__container{
-    /* overflow-y: scroll; */
     width: 90%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    /* background-color: aqua; */
     background-color: rgb(18, 2, 27);
     height: 100%;
     
@@ -88,7 +86,8 @@
     margin-bottom: 1rem;
     display: grid;
     grid-template-columns: 1fr 1.5fr;
-    /* gap: 5px; */
+    text-align: left;
+    padding-left: 0;
 }
 
 
@@ -111,6 +110,7 @@
     padding: 3px 5px;
     width: 50%;
     font-size: 15px;
+    text-align: left;
     /* background-color: cadetblue; */
 }
 
@@ -397,11 +397,32 @@
     .about__picture{
         width: 100%;
         height: 100%;
+        /* padding: 2px; */
     }
 
     .description__column{
-        width: 100%;
+        background-color: rgb(18, 2, 27);
+        width: 97%;
+        border-radius: 5rem 5rem 0 0;
+        position: relative;
+        top: -4rem;
+        /* left: 0; */
+        margin: auto;
     }
+
+    .brief__description, .my__details{
+        font-size: 20px;
+    }
+
+    .about__role{
+        font-size: 2.2em;
+        /* background-color: #fff; */
+        padding: 15px 0;
+        margin: 30px auto;
+        text-align: center;
+    }
+
+    
 
     .description__column p:last-child{
         margin-bottom: 10px;
@@ -459,6 +480,11 @@
 }
 
 @media screen  and (min-width:901px) {
+
+    .description__column p, .description__column ul{
+        font-size: 21px;   
+    }
+
     .about__table__row{
         /* border: 7px solid green; */
         height: fit-content;
@@ -474,18 +500,22 @@
         height: 100%;
     }
     .aboutMe__section{
-        /* border: 10px solid green; */
-        height: 450vh;
+        height: 389vh;
         margin-bottom: 1rem;
     }
 
     .about__container{
-        /* border: 10px solid green; */
-        height: 97.1%;
+        height: 94%;
+        margin-bottom: 2rem;
 
+    }
+
+    .about__testimonials__section{
+        margin-top: 2rem;
     }
 
     .testimonial__item img{
         top: -.7rem;
     }
 }
+
