--- a/src/Components/Resume/resume.css
+++ b/src/Components/Resume/resume.css
@@ -33,6 +33,7 @@
     margin: auto;
     margin-bottom: 1rem;
   }
+
   
   .resume__item {
     background-color: black;
@@ -40,25 +41,40 @@
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
-    /* margin-bottom: 2rem; */
+  }
+
+
+
+  .resume__item__title{
+    text-align: left;
   }
   
   .resume__education {
     margin-bottom: 1rem;
     margin-top: 1rem;
   }
-  
-  /* .resume__item >*, .resume__item__body >*{
-      margin-bottom: 2rem;
-  } */
+
   
   .resume__body {
     border-left: 2.9px solid #fff;
     padding-left: 1rem;
   }
+
+  .resume__body>p, .resume__body ul >*{
+    font-size: 19px;
+  }
+
+  .resume__body ul{
+    color: rgb(32, 7, 90);
+    font-size: 19px;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+  }
   
   .resume__item__body > * {
     margin-bottom: 1rem;
+    text-align: left;
   }
   
   .resume__item__body h2 strong,
@@ -119,6 +135,10 @@
     color: orangered;
     width: 29px;
     height: 29px;
+  }
+
+  .resume__space__bottom{
+    height: 2rem;
   }
   
   @media screen and (min-width: 774px) {
