--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
-*{
+a{
   transition: .4s ease-in-out;
 }
 
 html{
   scroll-behavior: smooth;
+}
+
+body{
+  background-color: rgb(218, 204, 187);
 }
